k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sharding-system
  labels:
    name: sharding-system
